Add 2x images for toolbar. Add fonts and the list view controller with a custom cell.

--- a/internal/projects/wood/Stamped/Stamped-Info.plist
+++ b/internal/projects/wood/Stamped/Stamped-Info.plist
@@ -34,5 +34,10 @@
 	</array>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleBlackOpaque</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>TGLight.otf</string>
+		<string>TitlingGothicFBComp-Reg.otf</string>
+	</array>
 </dict>
 </plist>
