Move to CoreData and the REST API

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ internal/projects/ios-fonts-test/FontTest/FontTest/CreateImageViewController.h
 internal/projects/ios-fonts-test/FontTest/FontTest.xcodeproj/project.xcworkspace/xcuserdata/kevin.xcuserdatad/UserInterfaceState.xcuserstate
 
 internal/projects/ios-fonts-test/FontTest/FontTest.xcodeproj/project.pbxproj
+
+internal/projects/bulleit/Stamped.xcodeproj/xcuserdata/andybons.xcuserdatad*
