I h8te GitHub for mac.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ internal/projects/ios-fonts-test/FontTest/FontTest.xcodeproj/project.xcworkspace
 internal/projects/ios-fonts-test/FontTest/FontTest.xcodeproj/project.pbxproj
 
 internal/projects/bulleit/Stamped.xcodeproj/xcuserdata/andybons.xcuserdatad*
+
+internal/projects/bulleit/Stamped.xcodeproj/xcuserdata/andybons.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
