--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ internal/projects/ios-fonts-test/FontTest/FontTest.xcodeproj/project.pbxproj
 internal/projects/bulleit/Stamped.xcodeproj/xcuserdata/andybons.xcuserdatad*
 
 internal/projects/bulleit/Stamped.xcodeproj/xcuserdata/andybons.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+internal/projects/bulleit/RestKit
