--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ internal/projects/bulleit/Stamped.xcodeproj/xcuserdata/andybons.xcuserdatad*
 internal/projects/bulleit/Stamped.xcodeproj/xcuserdata/andybons.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
 
 internal/projects/bulleit/RestKit
+
+internal/projects/bulleit/Stamped.xcodeproj/xcuserdata/andybons.xcuserdatad/xcschemes/xcschememanagement.plist
