Update to nginx conf

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -10,6 +10,10 @@ events {
 }
 
 http {
+    keepalive_timeout       10;
+    client_max_body_size    20m;
+    sendfile                on;
+    gzip                    on;
 
     upstream app_server {
         # We define the binding of the gunicorn web server
@@ -18,12 +22,12 @@ http {
     }
 
     server {
-        listen 5000;
+        listen          5000;
+        server_name     localhost;
+        charset         utf-8;
 
-        server_name localhost;
-
-        access_log /stamped/logs/localhost-access.log;
-        error_log /stamped/logs/localhost-error.log debug;
+        access_log      /stamped/logs/localhost-access.log;
+        error_log       /stamped/logs/localhost-error.log debug;
 
         location / {
             # checks for static file, if not found proxy to app
@@ -31,11 +35,11 @@ http {
         }
 
         location @proxy_to_app {
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $http_host;
-            proxy_redirect off;
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header    Host $http_host;
+            proxy_redirect      off;
 
-            proxy_pass   http://app_server;
+            proxy_pass          http://app_server;
         }
     }
 }
