Add SSH config to nginx

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -22,6 +22,33 @@ http {
     }
 
     server {
+        listen   443;
+
+        ssl    on;
+        ssl_certificate         /stamped/stamped/sites/stamped.com/bin/keys/nginx_www_stamped_com.crt;
+        ssl_certificate_key     /stamped/stamped/sites/stamped.com/bin/keys/stamped.key;
+
+        server_name     localhost;
+        charset         utf-8;
+
+        access_log      /stamped/logs/localhost-access.log;
+        error_log       /stamped/logs/localhost-error.log debug;
+
+        location / {
+            # checks for static file, if not found proxy to app
+            try_files $uri @proxy_to_app;
+        }
+
+        location @proxy_to_app {
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header    Host $http_host;
+            proxy_redirect      off;
+
+            proxy_pass          http://app_server;
+        }
+    }
+
+    server {
         listen          5000;
         server_name     localhost;
         charset         utf-8;
