Small fixes: Updated nginx config; added affiliate links to HTTPSchema (+ exportSparse); updated ID on Fandango feed; fixes to SampleData

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -28,7 +28,7 @@ http {
         ssl_certificate         /stamped/stamped/sites/stamped.com/bin/keys/nginx_www_stamped_com.crt;
         ssl_certificate_key     /stamped/stamped/sites/stamped.com/bin/keys/stamped.key;
 
-        server_name     localhost;
+        server_name     dev.stamped.com;
         charset         utf-8;
 
         access_log      /stamped/logs/localhost-access.log;
