Update to SampleData, changing GUnicorn to use gevent (shouldn't break things... but we'll see)

--- a/sites/stamped.com/bin/gunicorn.conf
+++ b/sites/stamped.com/bin/gunicorn.conf
@@ -3,7 +3,7 @@ import multiprocessing
 bind = "127.0.0.1:18000"
 backlog = 2048
 workers = multiprocessing.cpu_count() * 2 + 1
-worker_class = "sync"
+worker_class = "gevent"
 timeout = 20
 daemon = True
 loglevel = "debug"
