Testing new nginx config to speed things up; currently 2x as slow as non-SSL connection.
http://matt.io/technobabble/hivemind_devops_alert:_nginx_does_not_suck_at_ssl/ur
the internet is amazing

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -27,6 +27,7 @@ http {
         ssl    on;
         ssl_certificate         /stamped/stamped/sites/stamped.com/bin/keys/nginx_www_stamped_com.crt;
         ssl_certificate_key     /stamped/stamped/sites/stamped.com/bin/keys/stamped.key;
+        ssl_ciphers             ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:!kEDH;
 
         server_name     dev.stamped.com;
         charset         utf-8;
