--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -22,15 +22,15 @@ http {
     }
 
     server {
-        listen   443;
+        listen                  443;
+        server_name             dev.stamped.com;
+        charset                 utf-8;
+        keepalive_timeout       70;
 
-        ssl    on;
+        ssl                     on;
         ssl_certificate         /stamped/stamped/sites/stamped.com/bin/keys/nginx_www_stamped_com.crt;
         ssl_certificate_key     /stamped/stamped/sites/stamped.com/bin/keys/stamped.key;
         ssl_ciphers             ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:!kEDH;
-
-        server_name     dev.stamped.com;
-        charset         utf-8;
 
         access_log      /stamped/logs/localhost-access.log;
         error_log       /stamped/logs/localhost-error.log debug;
