More tweaks to nginx

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -14,6 +14,9 @@ http {
     client_max_body_size    20m;
     sendfile                on;
     gzip                    on;
+    tcp_nopush              on;
+    tcp_nodelay             on;
+    proxy_buffering         off;
 
     upstream app_server {
         # We define the binding of the gunicorn web server
@@ -31,6 +34,7 @@ http {
         ssl_certificate         /stamped/stamped/sites/stamped.com/bin/keys/nginx_www_stamped_com.crt;
         ssl_certificate_key     /stamped/stamped/sites/stamped.com/bin/keys/stamped.key;
         ssl_ciphers             ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:!kEDH;
+        ssl_session_cache       shared:SSL:500m;
 
         access_log      /stamped/logs/localhost-access.log;
         error_log       /stamped/logs/localhost-error.log debug;
