--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -24,10 +24,16 @@ http {
     tcp_nodelay             on;
     proxy_buffering         off;
 
-    upstream app_server {
+    upstream api_server {
         # We define the binding of the gunicorn web server
         server 127.0.0.1:18000;
         server localhost:18000;
+    }
+
+    upstream web_server {
+        # We define the binding of the gunicorn web server
+        server 127.0.0.1:19000;
+        server localhost:19000;
     }
 
     server {
@@ -55,7 +61,7 @@ http {
             proxy_set_header    Host $http_host;
             proxy_redirect      off;
 
-            proxy_pass          http://app_server;
+            proxy_pass          http://api_server;
         }
     }
 
@@ -77,7 +83,29 @@ http {
             proxy_set_header    Host $http_host;
             proxy_redirect      off;
 
-            proxy_pass          http://app_server;
+            proxy_pass          http://api_server;
+        }
+    }
+
+    server {
+        listen          80;
+        server_name     www.stamped.com;
+        charset         utf-8;
+
+        access_log      /stamped/logs/80-access.log;
+        error_log       /stamped/logs/80-error.log debug;
+
+        location / {
+            # checks for static file, if not found proxy to app
+            try_files $uri @proxy_to_app;
+        }
+
+        location @proxy_to_app {
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header    Host $http_host;
+            proxy_redirect      off;
+
+            proxy_pass          http://web_server;
         }
     }
 }
