--- a/internal/projects/bulleit/Info.plist
+++ b/internal/projects/bulleit/Info.plist
@@ -12,7 +12,8 @@
 	<string></string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>app_launcher_icon@2x.png</string>
+		<string>icon1@2x.png</string>
+		<string>icon1.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.stamped.${PRODUCT_NAME:rfc1034identifier}</string>
