--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -23,6 +23,8 @@ http {
     tcp_nopush              on;
     tcp_nodelay             on;
     proxy_buffering         off;
+    proxy_cache_path        /stamped/www/cache levels=1:2 keys_zone=web-cache:8m max_size=1000m inactive=600m;
+    proxy_temp_path         /stamped/www/cache/tmp;
 
     upstream api_server {
         # We define the binding of the gunicorn web server
@@ -58,7 +60,7 @@ http {
 
         location @proxy_to_app {
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header    Host $http_host;
+            proxy_set_header    Host $host;
             proxy_redirect      off;
 
             proxy_pass          http://api_server;
@@ -80,7 +82,7 @@ http {
 
         location @proxy_to_app {
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header    Host $http_host;
+            proxy_set_header    Host $host;
             proxy_redirect      off;
 
             proxy_pass          http://api_server;
@@ -102,10 +104,13 @@ http {
 
         location @proxy_to_app {
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header    Host $http_host;
+            proxy_set_header    Host $host;
             proxy_redirect      off;
 
             proxy_pass          http://web_server;
+            proxy_cache         web-cache;
+            proxy_cache_valid   200 302  60m;
+            proxy_cache_valid   404      1m;
         }
     }
 }
