Updates to nginx config. Please work!

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -23,10 +23,10 @@ http {
     tcp_nopush              on;
     tcp_nodelay             on;
     proxy_buffering         off;
-    
-    proxy_cache_path        /stamped/www/cache levels=1:2 keys_zone=web-cache:8m max_size=1000m inactive=600m;
+    proxy_cache_path        /stamped/www/cache levels=1:2 keys_zone=webcache:8m max_size=1000m inactive=600m;
     proxy_temp_path         /stamped/www/cache/tmp;
-    
+    proxy_cache_key         "$scheme$host$request_uri";
+
     upstream api_server {
         # We define the binding of the gunicorn web server
         server 127.0.0.1:18000;
@@ -109,7 +109,7 @@ http {
             proxy_redirect      off;
 
             proxy_pass          http://web_server;
-            proxy_cache         web-cache;
+            proxy_cache         webcache;
             proxy_cache_valid   200 302  60m;
             proxy_cache_valid   404      1m;
         }
