still tweaking nginx

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -23,7 +23,7 @@ http {
     tcp_nopush              on;
     tcp_nodelay             on;
     proxy_buffering         off;
-    proxy_cache_path        /stamped/www/cache levels=1:2 keys_zone=webcache:8m max_size=1000m inactive=600m;
+    proxy_cache_path        /stamped/www/cache keys_zone=webcache:10m;
     proxy_temp_path         /stamped/www/cache/tmp;
     proxy_cache_key         "$scheme$host$request_uri";
 
