--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "internal/projects/bulleit/RestKit"]
 	path = internal/projects/bulleit/RestKit
 	url = git@github.com:Stamped/RestKit.git
+[submodule "internal/projects/bulleit/Twitter-OAuth-iPhone"]
+	path = internal/projects/bulleit/Twitter-OAuth-iPhone
+	url = git://github.com/bengottlieb/Twitter-OAuth-iPhone.git
