--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -16,7 +16,7 @@ http {
     
     gzip                    on;
     gzip_disable            "msie6";
-    gzip_types              text/plain text/html text/css application/x-javascript text/xml application/xml application/xml+rss application/json text/javascript;
+    gzip_types              text/plain text/css application/x-javascript text/xml application/xml application/xml+rss application/json text/javascript;
     gzip_comp_level         9;
     gzip_min_length         0;
     
@@ -107,11 +107,13 @@ http {
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header    Host $host;
             proxy_redirect      off;
+            proxy_buffering     on;
 
-            proxy_pass          http://web_server;
             proxy_cache         webcache;
             proxy_cache_valid   200 302  60m;
             proxy_cache_valid   404      1m;
+
+            proxy_pass          http://web_server;
         }
     }
 }
