Change "like" threshold for new credits; messing with nginx but not ready to commit

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -104,6 +104,14 @@ http {
         }
 
         location @proxy_to_app {
+
+            ### REMOVED FOR NOW - NEED TO TEST TO GET WORKING   
+            ### ALSO ADD $uri TO proxy_cache_key
+                     
+            # if ($http_user_agent ~* '(iPhone|iPod)') {
+            #     rewrite ^/(.*)/stamps/(.*)$ /$1/mobile/$2 break;
+            # }
+
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header    Host $host;
             proxy_redirect      off;
