Updates to nginx caching for mobile

--- a/sites/stamped.com/bin/nginx.conf
+++ b/sites/stamped.com/bin/nginx.conf
@@ -25,7 +25,7 @@ http {
     proxy_buffering         off;
     proxy_cache_path        /stamped/www/cache keys_zone=webcache:10m;
     proxy_temp_path         /stamped/www/cache/tmp;
-    proxy_cache_key         "$scheme$host$request_uri";
+    proxy_cache_key         "$scheme$host$uri$request_uri";
 
     upstream api_server {
         # We define the binding of the gunicorn web server
@@ -104,13 +104,10 @@ http {
         }
 
         location @proxy_to_app {
-
-            ### REMOVED FOR NOW - NEED TO TEST TO GET WORKING   
-            ### ALSO ADD $uri TO proxy_cache_key
                      
-            # if ($http_user_agent ~* '(iPhone|iPod)') {
-            #     rewrite ^/(.*)/stamps/(.*)$ /$1/mobile/$2 break;
-            # }
+            if ($http_user_agent ~* '(2\.0 MMP|240x320|400X240|AvantGo|BlackBerry|Blazer|Cellphone|Danger|DoCoMo|Elaine\/3\.0|EudoraWeb|Googlebot-Mobile|hiptop|IEMobile|KYOCERA\/WX310K|LG\/U990|MIDP-2\.|MMEF20|MOT-V|NetFront|Newt|Nintendo Wii|Nitro|Nokia|Opera Mini|Palm|PlayStation Portable|portalmmm|Proxinet|ProxiNet|SHARP-TQ-GX10|SHG-i900|Small|SonyEricsson|Symbian OS|SymbianOS|TS21i-10|UP\.Browser|UP\.Link|webOS|Windows CE|WinWAP|YahooSeeker\/M1A1-R2D2|NF-Browser|iPhone|iPod|Android|BlackBerry9530|G-TU915 Obigo|LGE VX|webOS|Nokia5800)') {
+                rewrite ^/(.*)/stamps/(.*)$ /$1/mobile/$2 break;
+            }
 
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header    Host $host;
