--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "internal/projects/bulleit/Twitter-OAuth-iPhone"]
 	path = internal/projects/bulleit/Twitter-OAuth-iPhone
 	url = git://github.com/bengottlieb/Twitter-OAuth-iPhone.git
+[submodule "internal/projects/bulleit/Facebook-SDK"]
+	path = internal/projects/bulleit/Facebook-SDK
+	url = git://github.com/facebook/facebook-ios-sdk.git
