finished initial stamped friend search.

--- a/internal/projects/bulleit/Info.plist
+++ b/internal/projects/bulleit/Info.plist
@@ -46,5 +46,16 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb297022226980395</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
