--- a/internal/projects/bulleit/Info.plist
+++ b/internal/projects/bulleit/Info.plist
@@ -25,7 +25,7 @@
 				<string>icon1.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
-			<false/>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
