--- a/sites/stamped.com/bin/www/nginx_web.conf
+++ b/sites/stamped.com/bin/www/nginx_web.conf
@@ -23,8 +23,8 @@ http {
     tcp_nopush              on;
     tcp_nodelay             on;
     proxy_buffering         off;
-    proxy_cache_path        /stamped/www/web_cache keys_zone=webcache:10m;
-    proxy_temp_path         /stamped/www/web_cache/tmp;
+    proxy_cache_path        /stamped/www/cache keys_zone=webcache:10m;
+    proxy_temp_path         /stamped/www/cache/tmp;
     proxy_cache_key         "$scheme$host$uri$request_uri";
 
     upstream web_server {
