Add timing to nginx logs (for now)

--- a/sites/stamped.com/bin/httpapi/nginx.conf
+++ b/sites/stamped.com/bin/httpapi/nginx.conf
@@ -24,6 +24,11 @@ http {
     tcp_nodelay             on;
     proxy_buffering         off;
 
+    log_format timed_combined '$remote_addr - $remote_user [$time_local]  '
+        '"$request" $status $body_bytes_sent '
+        '"$http_referer" "$http_user_agent" '
+        '$request_time $upstream_response_time $pipe';
+
     upstream api_server {
         # We define the binding of the gunicorn web server
         server 127.0.0.1:18000;
@@ -35,7 +40,7 @@ http {
         server_name             stamped.com;
         charset                 utf-8;
 
-        access_log              /stamped/logs/nginx_api_access.log;
+        access_log              /stamped/logs/nginx_api_access.log timed_combined;
         error_log               /stamped/logs/nginx_api_error.log debug;
 
         location / {
@@ -64,7 +69,7 @@ http {
         ssl_ciphers             ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP:!kEDH;
         ssl_session_cache       shared:SSL:500m;
 
-        access_log              /stamped/logs/nginx_api_ssl_access.log;
+        access_log              /stamped/logs/nginx_api_ssl_access.log timed_combined;
         error_log               /stamped/logs/nginx_api_ssl_error.log debug;
 
         location / {
