Tweaks to nginx.conf

--- a/sites/stamped.com/bin/httpapi/nginx.conf
+++ b/sites/stamped.com/bin/httpapi/nginx.conf
@@ -12,13 +12,14 @@ events {
 http {
     keepalive_timeout       10;
     client_max_body_size    20m;
+    client_body_buffer_size 128k;
     sendfile                on;
     
     gzip                    on;
     gzip_disable            "msie6";
     gzip_types              text/plain text/css application/x-javascript text/xml application/xml application/xml+rss application/json text/javascript;
     gzip_comp_level         9;
-    gzip_min_length         0;
+    gzip_min_length         1100;
     
     tcp_nopush              on;
     tcp_nodelay             on;
