--- a/sites/stamped.com/bin/httpapi/gunicorn.conf
+++ b/sites/stamped.com/bin/httpapi/gunicorn.conf
@@ -7,6 +7,6 @@ worker_class = "gevent"
 timeout = 20
 daemon = False
 loglevel = "debug"
-logfile = "/stamped/logs/gunicorn_api.log"
+accesslog = "/stamped/logs/gunicorn_api.log"
 pidfile = "/stamped/conf/gunicorn_api.pid"
 
