--- a/sites/stamped.com/bin/httpapi/gunicorn.conf
+++ b/sites/stamped.com/bin/httpapi/gunicorn.conf
@@ -1,12 +1,13 @@
 import multiprocessing
 
-bind = "127.0.0.1:18000"
-backlog = 256
-workers = multiprocessing.cpu_count() * 2 + 1
+bind 		= "127.0.0.1:18000"
+backlog 	= 256
+workers 	= multiprocessing.cpu_count() * 2 + 1
 worker_class = "gevent"
-timeout = 20
-daemon = False
-loglevel = "debug"
-accesslog = "/stamped/logs/gunicorn_api.log"
-pidfile = "/stamped/conf/gunicorn_api.pid"
+timeout 	= 60
+daemon 		= False
+loglevel 	= "debug"
+accesslog 	= "/stamped/logs/gunicorn_api_access.log"
+errorlog 	= "/stamped/logs/gunicorn_api_errors.log"
+pidfile 	= "/stamped/conf/gunicorn_api.pid"
 
