--- a/sites/stamped.com/bin/httpapi/nginx.conf
+++ b/sites/stamped.com/bin/httpapi/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes 1;
+worker_processes 2;
 
 user nobody nogroup;
 pid /stamped/logs/nginx_api.pid;
@@ -50,6 +50,10 @@ http {
         }
 
         location @proxy_to_app {
+            if ($request_method !~ ^(GET|HEAD|POST)$ ) {
+                return 444;
+            }
+
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header    Host $host;
             proxy_redirect      off;
@@ -79,6 +83,10 @@ http {
         }
 
         location @proxy_to_app {
+            if ($request_method !~ ^(GET|HEAD|POST)$ ) {
+                return 444;
+            }
+            
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header    Host $host;
             proxy_redirect      off;
