Quick change to nginx log

--- a/sites/stamped.com/bin/httpapi/nginx.conf
+++ b/sites/stamped.com/bin/httpapi/nginx.conf
@@ -2,7 +2,7 @@ worker_processes 2;
 
 user nobody nogroup;
 pid /stamped/logs/nginx_api.pid;
-error_log /stamped/logs/nginx_api.error.log;
+error_log /stamped/logs/nginx_api_process.log;
 
 events {
     worker_connections 1024;
