Quck fix - carve out processors for nginx in gunicorn config

--- a/sites/stamped.com/bin/httpapi/gunicorn.conf
+++ b/sites/stamped.com/bin/httpapi/gunicorn.conf
@@ -13,6 +13,8 @@ import utils
 
 if utils.is_ec2():
     workers  = multiprocessing.cpu_count() * 2 + 1
+    if multiprocessing.cpu_count() > 4:
+        workers  = (multiprocessing.cpu_count() - 2) * 2 + 1
     worker_class = "gevent"
 else:
     workers  = 1
