--- a/clients/ios/Stamped copy-Info.plist
+++ b/clients/ios/Stamped copy-Info.plist
@@ -9,11 +9,13 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>icon_dev.png</string>
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>icon_dev@2x.png</string>
 		<string>icon_dev.png</string>
+		<string>Default@2x.png</string>
+		<string>Default.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -23,6 +25,8 @@
 			<array>
 				<string>icon_dev@2x.png</string>
 				<string>icon_dev.png</string>
+				<string>Default@2x.png</string>
+				<string>Default.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
