--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "clients/ios/RestKit"]
 	path = clients/ios/RestKit
-	url = git@github.com:Stamped/RestKit.git
+	url = git@github.com:/Stamped/RestKit.git
 [submodule "clients/ios/Twitter-OAuth-iPhone"]
 	path = clients/ios/Twitter-OAuth-iPhone
 	url = git://github.com/bengottlieb/Twitter-OAuth-iPhone.git
