--- a/clients/ios/Info.plist
+++ b/clients/ios/Info.plist
@@ -9,13 +9,11 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>icon1.png</string>
+	<string>icon.png</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>icon1@2x.png</string>
-		<string>icon1.png</string>
-		<string>Default@2x.png</string>
-		<string>Default.png</string>
+		<string>icon.png</string>
+		<string>icon@2x.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -23,10 +21,8 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>icon1@2x.png</string>
-				<string>icon1.png</string>
-				<string>Default@2x.png</string>
-				<string>Default.png</string>
+				<string>icon.png</string>
+				<string>icon@2x.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
