--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule "clients/ios/Twitter-OAuth-iPhone"]
 	path = clients/ios/Twitter-OAuth-iPhone
 	url = git://github.com/bengottlieb/Twitter-OAuth-iPhone.git
-[submodule "clients/ios/Facebook-SDK"]
-	path = clients/ios/Facebook-SDK
-	url = git://github.com/facebook/facebook-ios-sdk.git
 [submodule "clients/ios/ASIHTTPRequest"]
 	path = clients/ios/ASIHTTPRequest
 	url = git://github.com/pokeb/asi-http-request.git
+[submodule "clients/ios/Facebook-SDK"]
+	path = clients/ios/Facebook-SDK
+	url = git@github.com:facebook/facebook-ios-sdk
